--- a/backend/HelpDesk.Infrastructure/HelpDesk.Infrastructure.csproj
+++ b/backend/HelpDesk.Infrastructure/HelpDesk.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HelpDesk.Domain\HelpDesk.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
