--- a/backend/HelpDesk.Api/Properties/launchSettings.json
+++ b/backend/HelpDesk.Api/Properties/launchSettings.json
@@ -13,11 +13,12 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:7228;http://localhost:5212",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7228;http://localhost:5123", 
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
 }
+
