--- a/.gitignore
+++ b/.gitignore
@@ -273,6 +273,11 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
+# SQLite
+*.db
+*.db-shm
+*.db-wal
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
