--- a/backend/HelpDesk.Api/.env.example
+++ b/backend/HelpDesk.Api/.env.example
@@ -1,3 +1,3 @@
-﻿JWT_KEY=
-JWT_ISSUER=
-JWT_AUDIENCE=
+﻿JWT_KEY=EstaEsUnaClaveSuperSecretaDeAlMenos32Caracteres2025!
+JWT_ISSUER=HelpDeskApi
+JWT_AUDIENCE=HelpDeskFront
